--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
         <ul class="nav-bar__list">
             <li><a class="nav-bar__item" href="/index.html">Home</a></li>
-            <li><a class="nav-bar__item" href="">Product</a></li>
+            <li><a class="nav-bar__item" href="/Product-Page/product.html">Product</a></li>
             <li><a class="nav-bar__item" href=""><img class="nav-bar__img--icon nav-bar__img--wishlist"
                         src="/assets/image/HomePage-Images/Wishlist.png" alt="Wishlist"></a></li>
             <li class="nav-bar__item badge__wrapper"><img src="/assets/image/HomePage-Images/cart.png" alt="cart-badge"
@@ -53,7 +53,7 @@
             <a href="/index.html">
                 <li class="hamburger__item">Home</li>
             </a>
-            <a href="">
+            <a href="/Product-Page/product.html">
                 <li class="hamburger__item">Product</li>
             </a>
             <a href="">
