Style : Add Hamburger and responsiveness

--- a/Product-Page/product.html
+++ b/Product-Page/product.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trendy-T</title>
     <link rel="stylesheet" href="/Product-Page/product.css">
-    <link rel="stylesheet" href="/Home-Page/responsive.css">
+    <link rel="stylesheet" href="/Product-Page/product-Responsive.css">
 </head>
 
 <body>
@@ -64,6 +64,43 @@
             </a>
             <a href="">
                 <button class="hamburger__item hamburger__btn ">Login / Sign-Up</button>
+            </a>
+        </ul>
+    </div>
+
+    <!-- sidebar -->
+    <div class="sidebar">
+        <h1 class="sidebar__title">Components</h1>
+        <ul class="sidebar__list">
+            <a href="/Components/Avatar.html">
+                <li class="sidebar__item">Avatar</li>
+            </a>
+            <a href="/Components/Alert.html">
+                <li class="sidebar__item">Alert</li>
+            </a>
+            <a href="/Components/Badge.html">
+                <li class="sidebar__item">Badge</li>
+            </a>
+            <a href="/Components/Button.html">
+                <li class="sidebar__item">Button</li>
+            </a>
+            <a href="/Components/Image.html">
+                <li class="sidebar__item">Image</li>
+            </a>
+            <a href="/Components/Card.html">
+                <li class="sidebar__item">Card</li>
+            </a>
+            <a href="/Components/Input.html">
+                <li class="sidebar__item">Input</li>
+            </a>
+            <a href="/Components/Modal.html">
+                <li class="sidebar__item">Modal</li>
+            </a>
+            <a href="/Components/Navigation.html">
+                <li class="sidebar__item">Navigation</li>
+            </a>
+            <a href="/Components/Toast.html">
+                <li class="sidebar__item">Toast</li>
             </a>
         </ul>
     </div>
@@ -249,7 +286,7 @@
             <h6 class="footer__content">Designed by Saurabh Chawda</h6>
         </div>
     </div>
-    <script src="/Home-Page/index.js"></script>
+    <script src="/Product-Page/product.js"></script>
 </body>
 
 </html>
