Style : Update Sidebar

--- a/Product-Page/product.html
+++ b/Product-Page/product.html
@@ -69,41 +69,69 @@
     </div>
 
     <!-- sidebar -->
+
     <div class="sidebar">
-        <h1 class="sidebar__title">Components</h1>
-        <ul class="sidebar__list">
-            <a href="/Components/Avatar.html">
-                <li class="sidebar__item">Avatar</li>
-            </a>
-            <a href="/Components/Alert.html">
-                <li class="sidebar__item">Alert</li>
-            </a>
-            <a href="/Components/Badge.html">
-                <li class="sidebar__item">Badge</li>
-            </a>
-            <a href="/Components/Button.html">
-                <li class="sidebar__item">Button</li>
-            </a>
-            <a href="/Components/Image.html">
-                <li class="sidebar__item">Image</li>
-            </a>
-            <a href="/Components/Card.html">
-                <li class="sidebar__item">Card</li>
-            </a>
-            <a href="/Components/Input.html">
-                <li class="sidebar__item">Input</li>
-            </a>
-            <a href="/Components/Modal.html">
-                <li class="sidebar__item">Modal</li>
-            </a>
-            <a href="/Components/Navigation.html">
-                <li class="sidebar__item">Navigation</li>
-            </a>
-            <a href="/Components/Toast.html">
-                <li class="sidebar__item">Toast</li>
-            </a>
-        </ul>
+            <input class="sidebar__input--search" type="text" placeholder="Search Product">
+            <div class="sidebar--filter sidebar--price-filter">
+                <h2>Price</h2>
+                <ul class="sidebar__list--price-filter sidebar__list">
+                    <li class="sidebar__item sidebar__item--price-filter">
+                        <input type="radio">
+                        <label for="Price Filter">Range ₹250 - ₹350 </label>
+                    </li>
+                    <li class="sidebar__item sidebar__item--price-filter">
+                        <input type="radio">
+                        <label for="Price Filter">Range ₹350 - ₹450 </label>
+                    </li>
+                    <li class="sidebar__item sidebar__item--price-filter" >
+                        <input type="radio">
+                        <label for="Price Filter">Range ₹550 - ₹650 </label>
+                    </li>
+                </ul>
+            </div>
+            <div class="sidebar--filter sidebar--category-filter">
+                <h2>Category</h2>
+                <ul class="sidebar__list--category-filter sidebar__list">
+                    <li class="sidebar__item sidebar__item--category-filter">
+                        <input type="checkbox">
+                        <label for="category Filter">Man T-Shirt</label>
+                    </li>
+                    <li class="sidebar__item sidebar__item--category-filter">
+                        <input type="checkbox">
+                        <label for="category Filter">Women T-Shirt</label>
+                    </li>
+                    <li class="sidebar__item sidebar__item--category-filter" >
+                        <input type="checkbox">
+                        <label for="category Filter">Kid T-Shirt</label>
+                    </li>
+                    <li class="sidebar__item sidebar__item--category-filter" >
+                        <input type="checkbox">
+                        <label for="category Filter">Family T-Shirt</label>
+                    </li>
+                </ul>
+            </div>
+            <div class="sidebar--price-filter">
+                <h2>Price</h2>
+                <ul class="sidebar__list--price-filter">
+                    <li class="sidebar__item--price-filter">
+                        <input type="radio">
+                        <label for="Price Filter">Range ₹250 - ₹350 </label>
+                    </li>
+                    <li class="sidebar__item--price-filter">
+                        <input type="radio">
+                        <label for="Price Filter">Range ₹350 - ₹450 </label>
+                    </li>
+                    <li class="sidebar__item--price-filter" >
+                        <input type="radio">
+                        <label for="Price Filter">Range ₹550 - ₹650 </label>
+                    </li>
+                </ul>
+            </div>
     </div>
+
+
+
+
 
     <main>
         <!-- Product Card-->
