style : Change Home page height

--- a/Product-Page/product.html
+++ b/Product-Page/product.html
@@ -239,7 +239,7 @@
                         <img class="card-product__bg--img" src="/assets/image/Product-Images/math.jpg">
                     </div>
                     <div class="card-product__content">
-                        <h3 class="card-product__content--title">mathematics T-shirt</h3>
+                        <h3 class="card-product__content--title">Mathematics Tshirt</h3>
                         <span class="card-product__content--price">₹ 450/-</span>
                         <small class="card-product__content--price-line">₹ 550</small>
                     </div>
