style : add sidebar scroll property

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <h2 class="home-wrapper__subtitle">CUSTOM PRINTED T-SHIRTS</h2>
             <P class="home-wrapper__content">Wear trendy, funky, stylish T-Shirts.</P>
             <p class="home-wrapper__text">"What you Wear is What you are."</p>
-            <a href=""><button class="home__btn">Shop Now</button></a>
+            <a href="/Product-Page/product.html"><button class="home__btn">Shop Now</button></a>
         </section>
 
         <!-- Home Page Content Ends Here -->
