Feat : Add Wishlist Page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul class="nav-bar__list">
             <li><a class="nav-bar__item" href="/index.html">Home</a></li>
             <li><a class="nav-bar__item" href="/Product-Page/product.html">Product</a></li>
-            <li><a class="nav-bar__item" href=""><img class="nav-bar__img--icon nav-bar__img--wishlist"
+            <li><a class="nav-bar__item" href="/wishlist-page/wishlist.html"><img class="nav-bar__img--icon nav-bar__img--wishlist"
                         src="/assets/image/HomePage-Images/Wishlist.png" alt="Wishlist"></a></li>
             <li class="nav-bar__item badge__wrapper"><img src="/assets/image/HomePage-Images/cart.png" alt="cart-badge"
                     class="nav-bar__img--icon nav-bar__img--cart badge__icon--img">
@@ -56,7 +56,7 @@
             <a href="/Product-Page/product.html">
                 <li class="hamburger__item">Product</li>
             </a>
-            <a href="">
+            <a href="/wishlist-page/wishlist.html">
                 <li class="hamburger__item">Wishlist</li>
             </a>
             <a href="">
